# cyclops-ui

./: README.md  angular.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
backup/hawki-db.backup/hawki/: Admin.metadata.json  Projects.metadata.json  Task.metadata.json  Tools.metadata.json  appscan_cache.metadata.json  appscan_teams.metadata.json  assesment.metadata.json  assesment_scheduler.metadata.json  asset_domain.metadata.json  bitbucket_mapping.metadata.json  bitbucket_projects.metadata.json  bitbucket_repos.metadata.json  business.metadata.json  business_status.metadata.json  celery_groupmeta.metadata.json  (+38 more)
migrations/main/: ___.jsonl  all_apps.json  app-dump.json  apps-from-assessment.json  apps.json  init.sh  karate.json  karate.jsonl
migrations/step-1/: script.sh
migrations/step-2/: all-apps-formatted.json  app-struct-default.json  app-struct.json  apps.json  script.py
migrations/step-3/: Readme.md  dump.json  dump.json~  script.py  struct.json  target.struct.json  tmp.txt
migrations/step-4/: README.md  filedb.py  files.db.json  script.py
migrations/step-5/: .env  main.py
migrations/step-6/: script.py
migrations/step-7/: README.md  ds.py  script.py
src/: index.html  polyfills.ts  styles.scss  themes.scss
src/app/: AuthGuard.ts  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  new-sidebar.service.html  new-sidebar.service.spec.ts  new-sidebar.service.ts  role.provider.ts  slide-in-animation.directive.ts
src/environments/: constants.ts  environment.prod.ts  environment.ts
(+367 files in other folders)
